<resources>
    <string name="app_name">HardTask 2</string>
    <string name="register_title">Register</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="mobile_number_hint">123456</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="terms_message_text">By clicking register you agree to <font color='#ffcc0000'>Terms and Conditions</font></string>
    <string name="term_conditions">Terms and Conditions</string>
    <string name="change_language">Change Language</string>
    <string name="close">Close</string>


</resources>