<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_register"
                style="@style/title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edit_name"
                style="@style/full_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/text_register"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textPersonName"
                android:hint="@string/full_name"/>

            <EditText
                android:id="@+id/edit_password"
                style="@style/full_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/edit_name"
                android:background="@drawable/input"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <LinearLayout
                android:id="@+id/layout_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="locale"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/edit_name"
                app:layout_constraintTop_toBottomOf="@id/edit_password">
                <Spinner
                    android:id="@+id/edit_code"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/list_small"
                    android:layout_weight="0.4"
                    android:layout_marginEnd="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:hint="@string/code"/>

                <EditText
                    android:id="@+id/edit_mobile"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:background="@drawable/input_medium"
                    android:hint="@string/mobile_number_hint"
                    android:layout_marginStart="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="0.7"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edit_email"
                style="@style/full_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/layout_number"
                android:background="@drawable/input"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                android:inputType="textEmailAddress"/>

            <Spinner
                android:id="@+id/edit_country"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                android:background="@drawable/list"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/country"/>

            <Spinner
                android:id="@+id/edit_city"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/edit_country"
                android:background="@drawable/list"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"

                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/country"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
        android:id="@+id/text_tc_message"
        style="@style/text_style"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_message_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        app:layout_constraintBottom_toTopOf="@id/btn_change_language"
        />

    <TextView
        android:id="@+id/text_tc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_conditions"
        android:visibility="gone"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        app:layout_constraintStart_toEndOf="@id/text_tc_message"
        />


    <Button
        android:id="@+id/btn_change_language"
       style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_language"
        app:backgroundTint="@null"
        android:background="@drawable/btn_big_red"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>